testsuite/tests/grammar/invalid_token_families/present_twice.lkt
import common

lexer foo_lexer {
    family alphanumericals {
        number <- p"[0-9]+"
        identifier <- p"[a-zA-Z_][a-zA-Z0-9_]*"
    }

    family alphanumericals {
        number <- p"[0-9]+"
    }
}
